# yandex-geobase

./: .dockerignore  .env.example  .gitignore  DockerFile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
UML/: architecture-diagram.puml  database-schema.puml  sequence-diagram.puml  use-case-diagram.puml
app/: main.py
app/api/: admin_routes.py  auth_routes.py  routes.py
app/core/: config.py  dependencies.py  security.py
app/db/: models.py  pool.py  seed.py
app/models/: schemas.py
docs/: 000_full_database_schema.sql
docs/migrations/: add_image_url_to_geo_objects.sql
frontend/: README.md  package-lock.json  package.json
frontend/static/css/: admin.css  auth.css  dashboard.css  style.css
frontend/static/js/: admin.js  login.js  profile.js  register.js  script.js
frontend/templates/: admin.html  index.html  login.html  profile.html  register.html
