[project]
name = "yandex-geobase"
version = "0.1.0"
description = "Геобаза на Yandex Maps"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.12",
    "asyncpg>=0.30.0",
    "pydantic[email]>=2.10.3",
    "pydantic-settings>=2.7.0",
    "sqlalchemy>=2.0.49",
    "psycopg2-binary==2.9.12",
    "PyJWT>=2.8.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==3.2.2",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
